--- a/views/post.ejs
+++ b/views/post.ejs
@@ -5,10 +5,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%=post.title%></title>
-    <h1><%=post.title%></h1>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <nav class="navbar bg-body-tertiary" style="background-color: #e3f2fd;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Home</a>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+    </nav>
+    <% if (locals.post) { %>
+        <title><%=post.title%></title>
+        <h1><%=post.title%></h1>
+        <% } %>
 </head>
 <body>
-    <p><%=post.content%></p>
+    <% if (locals.post) { %>
+        <p><%=post.content%></p>
+    <% } %>
+    <form action="/deletePost/<%=postid%>" method="post">
+        <button id = "delete" type="submit" class="btn btn-primary btn-lg btn-danger">Delete</button>
+    </form>
+    <form action="/editPost/<%=postid%>" method="post">
+        <button id = "edit" type="submit" class="btn btn-primary btn-lg btn-primary">Edit</button>
+    </form>
+    <script>
+        $("#delete").click(function() {
+            return confirm("Are you sure you want to delete this post?");
+        });
+    </script>
 </body>
 </html>
