--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <body>
     <div class="container">
-        <div class="list-group">
+        <div class="list-group bg-primary">
             <% if (locals.posts) { 
                 for (var i = 0; i < posts.length; i++) { %>
             <a href= <%=i%> class="list-group-item list-group-item-action"><%=posts[i].title%></a>
