--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,11 @@
-<%- include("partials/header.ejs") %>
+<%-include("partials/header.ejs")%>
+
+<style>
+    form{
+        text-align: center;
+    }
+    
+</style>
 <body>
     <form action="/<%=postid%>" method="post">
         <label for="title">Title:</label><br>
