--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,17 +1,34 @@
 <%-include("partials/header.ejs")%>
-
+<style>
+    h1{
+        text-align: center;
+        font-size: 3.5em;
+    }
+    p {
+        text-align: center;
+        font-size: 1.2em;   
+    }
+    
+</style>
 <body>
     <% if (locals.post) { %>
         <title><%=post.title%></title>
         <h1><%=post.title%></h1>
         <p><%=post.content%></p>
     <% } %>
-    <form action="/deletePost/<%=postid%>" method="post">
-        <button id = "delete" type="submit" class="btn btn-primary btn-lg btn-danger">Delete</button>
-    </form>
-    <form action="/editPost/<%=postid%>" method="post">
-        <button id = "edit" type="submit" class="btn btn-primary btn-lg btn-primary">Edit</button>
-    </form>
+    <div class="container" style="justify-content: space-evenly;">
+        <div class="first">
+            <form action="/deletePost/<%=postid%>" method="post">
+                <button id = "delete" type="submit" class="btn btn-primary btn-lg btn-danger">Delete</button>
+            </form>
+        </div>
+        <div class="second">
+            <form action="/editPost/<%=postid%>" method="post">
+                <button id = "edit" type="submit" class="btn btn-primary btn-lg btn-primary">Edit</button>
+            </form>
+        </div>
+    </div>
+    
     <script>
         $("#delete").click(function() {
             return confirm("Are you sure you want to delete this post?");
